# orra-dm-2024-25

./: README.md  evaluation.py  hello.py  pyproject.toml
config/: env.yml
data/dataset_10/: X.npy  Y.npy  Z.npy
data/dataset_4/: X.npy  Y.npy  Z.npy
notebooks/: example.ipynb  loading_cars_data.ipynb
python/: models.py
